--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
 
     <main>
-      <section class="decision section">
+      <!-- <section class="decision section">
         <div class="container">
           <h1 class="decision__title list">
             Ефективні рішення для вашого бізнесу
@@ -132,11 +132,10 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="features section">
+      <!-- <section class="features section">
         <div class="container">
-          <!--прихований заголовок-->
           <h2 class="features__title">Особливості</h2>
           <ul class="features__list list">
             <li class="features__item">
@@ -188,9 +187,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="examples list">
@@ -483,9 +482,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="customers list">
@@ -587,10 +586,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__box list">
           <div class="footer__card list">
@@ -700,7 +699,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
