--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           </li>
         </ul>
       </div>
+      <button type="button" class="header__btn">
+        <svg class="header__icon">
+          <use href="./images/symbol-defs.svg#icon-menubtn"></use>
+        </svg>
+      </button>
     </header>
 
     <main>
