--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <main>
-      <!-- <section class="decision section">
+      <section class="decision section">
         <div class="container">
           <h1 class="decision__title list">
             Ефективні рішення для вашого бізнесу
@@ -137,9 +137,9 @@
             </form>
           </div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="features section">
+      <section class="features section">
         <div class="container">
           <h2 class="features__title">Особливості</h2>
           <ul class="features__list list">
@@ -192,7 +192,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section">
         <div class="container">
