--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
       </section>
 
-      <!-- <section class="section">
+      <section class="exampl section">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="examples list">
@@ -241,7 +241,7 @@
         </div>
       </section>
 
-      <section class="stuff section">
+      <!-- <section class="stuff section">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="stuff__list list">
