--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </div>
       </section>
 
-      <!-- <section class="stuff section">
+      <section class="stuff section">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="stuff__list list">
@@ -487,7 +487,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section">
         <div class="container">
