--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li class="contacts__item">
             <a
               href="tel:+380961111111"
-              class="contacts__link contacts__link--hover"
+              class="contacts__link contacts__link--hover contacts__link--petty"
               ><svg class="contacts__icon" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
