--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__box list">
           <div class="footer__card list">
@@ -704,7 +704,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
   </body>
 </html>
