--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
   </head>
   <body class="page">
     <header class="header section">
-      <div class="header__container container">
-        <nav class="header__container">
-          <a href="./index.html" class="logotype"
-            >Web<span class="logotype__text logotype__text--black"
-              >Studio</span
-            ></a
-          >
+      <div class="container">
+        <nav class="header__navigation">
+          <div class="header__block">
+            <a href="./index.html" class="logotype"
+              >Web<span class="logotype__text logotype__text--black"
+                >Studio</span
+              >
+            </a>
+            <button type="button" class="header__btn">
+              <svg class="header__icon">
+                <use href="./images/symbol-defs.svg#icon-menubtn"></use>
+              </svg>
+            </button>
+          </div>
           <ul class="nav list">
             <li class="nav__item">
               <a href="./index.html" class="nav__link current">Студія</a>
@@ -43,27 +50,24 @@
               class="contacts__link contacts__link--hover"
             >
               <svg class="contacts__icon" width="16px" height="12px">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
           <li class="contacts__item">
             <a
               href="tel:+380961111111"
               class="contacts__link contacts__link--hover contacts__link--petty"
-              ><svg class="contacts__icon" width="10px" height="16px">
+            >
+              <svg class="contacts__icon" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11</a
-            >
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
-      <button type="button" class="header__btn">
-        <svg class="header__icon">
-          <use href="./images/symbol-defs.svg#icon-menubtn"></use>
-        </svg>
-      </button>
     </header>
 
     <main>
@@ -127,9 +131,10 @@
                   value="agreement"
                 />
                 <svg class="form__pic">
-                  <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
-                >Погоджуюся з розсилкою та приймаю
-                <span class="form__condition"> Умови договору</span>
+                  <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                </svg>
+                Погоджуюся з розсилкою та приймаю
+                <span class="form__condition">Умови договору</span>
               </label>
               <button type="submit" class="button form__button--effects">
                 Відправити
