--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,20 @@
 
   <body class="page">
     <header class="header section">
-      <div class="header__container container">
-        <nav class="header__container">
-          <a href="./index.html" class="logotype"
-            >Web<span class="logotype__text logotype__text--black"
-              >Studio</span
-            ></a
-          >
+      <div class="container">
+        <nav class="header__navigation">
+          <div class="header__block">
+            <a href="./index.html" class="logotype"
+              >Web<span class="logotype__text logotype__text--black"
+                >Studio</span
+              >
+            </a>
+            <button type="button" class="header__btn">
+              <svg class="header__icon">
+                <use href="./images/symbol-defs.svg#icon-menubtn"></use>
+              </svg>
+            </button>
+          </div>
           <ul class="nav list">
             <li class="nav__item">
               <a href="./index.html" class="nav__link">Студія</a>
@@ -44,19 +51,21 @@
               class="contacts__link contacts__link--hover"
             >
               <svg class="contacts__icon" width="16px" height="12px">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
           <li class="contacts__item">
             <a
               href="tel:+380961111111"
-              class="contacts__link contacts__link--hover"
-              ><svg class="contacts__icon" width="10px" height="16px">
+              class="contacts__link contacts__link--hover contacts__link--petty"
+            >
+              <svg class="contacts__icon" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11</a
-            >
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
