--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
                 >Studio</span
               >
             </a>
-            <button type="button" class="header__btn">
-              <svg class="header__icon">
+            <button
+              class="menu-toggle js-open-menu"
+              aria-expanded="false"
+              aria-controls="mobile-menu"
+            >
+              <svg width="24" height="16">
                 <use href="./images/symbol-defs.svg#icon-menubtn"></use>
               </svg>
             </button>
@@ -710,6 +714,62 @@
         </div>
       </div>
     </footer>
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu-cls-btn">
+          <use href="./images/symbol-defs.svg#icon-mobile_closebtn"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link current">Студія</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link">Портфоліо</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link">Контакти</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contacts">
+        <li class="mobile-contacts-item">
+          <a href="tel:+380961111111" class="mobile-contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li class="mobile-contacts-item">
+          <a href="mailto:info@devstudio.com" class="mobile-contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="mobile-social">
+        <li class="mobile-social-item">
+          <a href="/" class="mobile-social-link">Instagram</a>
+        </li>
+        <li class="mobile-social-item">
+          <a href="/" class="mobile-social-link">Twitter</a>
+        </li>
+        <li class="mobile-social-item">
+          <a href="/" class="mobile-social-link">Facebook</a>
+        </li>
+        <li class="mobile-social-item">
+          <a href="/" class="mobile-social-link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
