--- a/index.html
+++ b/index.html
@@ -722,43 +722,43 @@
         </svg>
       </button>
 
-      <ul class="mobile-menu">
+      <ul class="mobile-menu list">
         <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-link current">Студія</a>
+          <a href="./" class="mobile-menu-link link current">Студія</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-link">Портфоліо</a>
+          <a href="./" class="mobile-menu-link link">Портфоліо</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-link">Контакти</a>
+          <a href="./" class="mobile-menu-link link">Контакти</a>
         </li>
       </ul>
 
-      <ul class="mobile-contacts">
+      <ul class="mobile-contacts list">
         <li class="mobile-contacts-item">
-          <a href="tel:+380961111111" class="mobile-contacts-link"
+          <a href="tel:+380961111111" class="mobile-contacts-link link current"
             >+38 096 111 11 11</a
           >
         </li>
         <li class="mobile-contacts-item">
-          <a href="mailto:info@devstudio.com" class="mobile-contacts-link"
+          <a href="mailto:info@devstudio.com" class="mobile-contacts-link link"
             >info@devstudio.com</a
           >
         </li>
       </ul>
 
-      <ul class="mobile-social">
+      <ul class="mobile-social list">
         <li class="mobile-social-item">
-          <a href="/" class="mobile-social-link">Instagram</a>
+          <a href="./" class="mobile-social-link link">Instagram</a>
         </li>
         <li class="mobile-social-item">
-          <a href="/" class="mobile-social-link">Twitter</a>
+          <a href="./" class="mobile-social-link link">Twitter</a>
         </li>
         <li class="mobile-social-item">
-          <a href="/" class="mobile-social-link">Facebook</a>
+          <a href="./" class="mobile-social-link link">Facebook</a>
         </li>
         <li class="mobile-social-item">
-          <a href="/" class="mobile-social-link">LinkedIn</a>
+          <a href="./" class="mobile-social-link link">LinkedIn</a>
         </li>
       </ul>
     </div>
