add retina picture in profile

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/laptopteam.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x.jpg      370w,
+                      ./images/portfolio/img_tabl@1x.jpg 354w,
+                      ./images/portfolio/img_mob@1x.jpg  450w,
+                      ./images/portfolio/img@2x.jpg      740w,
+                      ./images/portfolio/img_tabl@2x.jpg 708w,
+                      ./images/portfolio/img_mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x.jpg"
                     alt="laptop with picture of the team"
                   />
                   <div class="apps__overlay">
@@ -138,7 +147,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/basketballplayers.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-1.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-1.jpg 354w,
+                      ./images/portfolio/img_mob@1x-1.jpg  450w,
+                      ./images/portfolio/img@2x-1.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-1.jpg 708w,
+                      ./images/portfolio/img_mob@2x-1.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-1.jpg"
                     alt="basketball players"
                   />
                   <div class="apps__overlay">
@@ -168,7 +186,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/fishtitle.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-2.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-2.jpg 354w,
+                      ./images/portfolio/img_mob@1x-2.jpg  450w,
+                      ./images/portfolio/img@2x-2.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-2.jpg 708w,
+                      ./images/portfolio/img_mob@2x-2.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-2.jpg"
                     alt="fish and title"
                   />
                   <div class="apps__overlay">
@@ -196,7 +223,17 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/headphone.jpg"
+                    class="apps__block"
+                    srcset="
+                      ./images/portfolio/img@1x-3.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-3.jpg 354w,
+                      ./images/portfolio/img_mob@1x-3.jpg  450w,
+                      ./images/portfolio/img@2x-3.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-3.jpg 708w,
+                      ./images/portfolio/img_mob@2x-3.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-3.jpg"
                     alt="headphone"
                   />
                   <div class="apps__overlay">
@@ -224,7 +261,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/twoboxies.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-4.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-4.jpg 354w,
+                      ./images/portfolio/img_mob@1x-4.jpg  450w,
+                      ./images/portfolio/img@2x-4.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-4.jpg 708w,
+                      ./images/portfolio/img_mob@2x-4.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-4.jpg"
                     alt="twoboxies"
                   />
                   <div class="apps__overlay">
@@ -252,7 +298,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/laptopwithmaponthescreen.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-5.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-5.jpg 354w,
+                      ./images/portfolio/img_mob@1x-5.jpg  450w,
+                      ./images/portfolio/img@2x-5.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-5.jpg 708w,
+                      ./images/portfolio/img_mob@2x-5.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-5.jpg"
                     alt="laptop with a map on the screen"
                   />
                   <div class="apps__overlay">
@@ -280,7 +335,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/picturebook.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-6.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-6.jpg 354w,
+                      ./images/portfolio/img_mob@1x-6.jpg  450w,
+                      ./images/portfolio/img@2x-6.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-6.jpg 708w,
+                      ./images/portfolio/img_mob@2x-6.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-6.jpg"
                     alt="a picture book"
                   />
                   <div class="apps__overlay">
@@ -308,7 +372,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/whitekeyring.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-7.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-7.jpg 354w,
+                      ./images/portfolio/img_mob@1x-7.jpg  450w,
+                      ./images/portfolio/img@2x-7.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-7.jpg 708w,
+                      ./images/portfolio/img_mob@2x-7.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-7.jpg"
                     alt="white key ring"
                   />
                   <div class="apps__overlay">
@@ -336,7 +409,16 @@
                 <div class="apps__image">
                   <img
                     class="apps__block"
-                    src="./images/laptopwithbusinessadvertisement.jpg"
+                    srcset="
+                      ./images/portfolio/img@1x-8.jpg      370w,
+                      ./images/portfolio/img_tabl@1x-8.jpg 354w,
+                      ./images/portfolio/img_mob@1x-8.jpg  450w,
+                      ./images/portfolio/img@2x-8.jpg      740w,
+                      ./images/portfolio/img_tabl@2x-8.jpg 708w,
+                      ./images/portfolio/img_mob@2x-8.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img_mob@1x-8.jpg"
                     alt="laptop with business advertisement"
                   />
                   <div class="apps__overlay">
